<resources>
    <string name="app_name">NotePad</string>

    <!-- common -->
    <string name="note_edit_btn">수정</string>
    <string name="note_remove_btn">삭제</string>
    <string name="note_save_btn">저장</string>
    <string name="note_cancel_btn">취소</string>
    <string name="note_close_btn">닫기</string>

    <!-- Main Layout -->
    <string name="note_save_failed">저장에 실패하였습니다.</string>
    <string name="note_delete_failed">삭제에 실패하였습니다.</string>
    <string name="note_update_failed">수정 불러오기에 실패하였습니다.</string>
    <string name="note_detail_failed">상세보기에 실패하였습니다.</string>

    <!-- Add/Update Layout -->
    <string name="note_add_title">메모 추가하기</string>
    <string name="note_add_title_hint">제목을 이곳에 입력해주세요 !</string>
    <string name="note_add_desc_hint">본문을 이곳에 입력해 주세요 !</string>
    <string name="note_add_image_add">이미지 추가하기</string>
    <string name="note_add_image_remove_failed">이미지 삭제에 실패하였습니다.</string>


    <string name="note_add_cant_save_no_title_guide">제목을 입력해주세요.</string>
    <string name="note_add_cant_save_no_desc_guide">본문을 입력해주세요.</string>

    <!-- Detail Layout -->

    <!-- Select Image Dialog -->
    <string name="dialog_select_image_photo">사진 찍기</string>
    <string name="dialog_select_image_gallery">사진첩에서 가져오기</string>
    <string name="dialog_select_image_url">URL에서 가져오기</string>
    <string name="dialog_select_image_url_edit">URL을 입력해주세요.</string>
    <string name="dialog_select_image_url_edit_confirm">URL 입력 완료</string>
    <string name="dialog_select_image_failed">사진 불러오기에 실패하였습니다.</string>
    <string name="dialog_cant_load_url_image">URL을 통해 이미지를 가져오지 못했습니다.</string>


</resources>
