<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="15dp"
        android:background="@color/color_E6E6E6">

        <Button
            android:id="@+id/d_select_image_dismiss_btn"
            android:layout_width="@dimen/dialog_dismiss_btn_width"
            android:layout_height="@dimen/dialog_dismiss_btn_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            />

        <Button
            android:id="@+id/d_select_image_photo"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/d_select_image_gallery"
            android:layout_marginTop="@dimen/dialog_dismiss_btn_height"
            android:textSize="15sp"
            android:text="@string/dialog_select_image_photo"
            />

        <Button
            android:id="@+id/d_select_image_gallery"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_select_image_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/d_select_image_url"
            android:textSize="15sp"
            android:text="@string/dialog_select_image_gallery"
            />

        <Button
            android:id="@+id/d_select_image_url"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_select_image_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/d_select_image_url_edit"
            android:textSize="15sp"
            android:text="@string/dialog_select_image_url"
            />

        <EditText
            android:id="@+id/d_select_image_url_edit"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_select_image_url"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/d_select_image_url_edit_confirm"
            android:textSize="15sp"
            android:hint="@string/dialog_select_image_url_edit"
            android:maxLines="1"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/d_select_image_url_edit_confirm"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_select_image_url_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="15sp"
            android:text="@string/dialog_select_image_url_edit_confirm"
            android:visibility="gone"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>